Fixed map on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -557,10 +557,10 @@ footer .fa {
 	}
 
 	#first {
-		width: 70vw;
-		background-color: #fff;
-		margin: 5vw auto 5vw auto;
-		padding: 0 10vw 5vw 10vw;
+		width: 90vw;
+    	background-color: #fff;
+    	margin: 5vw auto 5vw auto;
+    	padding: 0 5vw 5vw 5vw;
 	}
 
 	#article-page.closed {
